<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/pickupDelivery"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Pickup and Delivery"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="#000"
            />
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#90A4AE"/>

        <LinearLayout
            android:id="@+id/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/q1"
                android:textColor="#0097A7"/>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/q1ans"
                android:textColor="#78909C"/>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/q2_pickup"
                android:textColor="#0097A7"/>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_pickup_ans"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#78909C"/>
            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="0.2dp"
                android:background="#90A4AE"/>

        </LinearLayout>


        <TextView
            android:id="@+id/washingFAQ"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Washing"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            />
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#90A4AE"/>
        <LinearLayout
            android:id="@+id/Q_wash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_washing"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#0097A7"/>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_wash_ans"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#78909C"/>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_washing"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#0097A7"/>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_wash_ans"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#78909C"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="0.2dp"
                android:background="#90A4AE"/>


        </LinearLayout>
        <TextView
            android:id="@+id/payment"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Payment"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="#000"
            />
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.2dp"
            android:background="#90A4AE"/>

        <LinearLayout
            android:id="@+id/Q_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_payment"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#0097A7"/>
            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_payment_ans"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#78909C"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="0.2dp"
                android:background="#90A4AE"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>