<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/image3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Our Promises"
                android:textColor="#074e72"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/premium_press"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1.1"
                        android:src="@mipmap/money" />
                    />

                    <TextView
                        android:id="@+id/premium_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="Privacy Policy"
                        android:textColor="#78909C"
                        android:textSize="11dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dry_press"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1.2"
                        android:src="@mipmap/guarantee" />
                    />

                    <TextView
                        android:id="@+id/dry_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="Conveniece Guarantee"
                        android:textColor="#78909C"
                        android:textSize="11dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wash_press"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1.2"
                        android:src="@mipmap/cheque" />

                    <TextView
                        android:id="@+id/wash_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="Easy Payment"
                        android:textColor="#78909C"
                        android:textSize="11dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/iron_press"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/textview_border"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"

                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1.2"
                        android:src="@mipmap/packaging" />
                    />

                    <TextView
                        android:id="@+id/iron_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="Packaging"
                        android:textColor="#78909C"
                        android:textSize="11dp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Our Vision and Mission"
                android:textColor="#074e72"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/vision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/vision"
                android:textColor="#696969"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Our Services"
                android:textColor="#074e72"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/rightarrow"
                android:drawablePadding="5dp"
                android:text="Dry Cleaner"
                android:textColor="#696969"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/rightarrow"
                android:drawablePadding="5dp"
                android:text="Laundry Service Dyer Dry Cleaner"
                android:textColor="#696969"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/services1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="@string/service1"
                android:textColor="#696969"
                android:textSize="15dp" />

        </LinearLayout>

    </ScrollView>
    <!-- <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_above="@+id/address_layout"
         android:background="#000000"></View>
 -->
    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="Address:"
            android:textColor="#FFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/address"
            android:textColor="#FFF"
            android:textSize="12dp" />
    </LinearLayout>


</RelativeLayout>